[toolbars-ui] fix pluginmenubutton gap (#4473)

--- a/packages/toolbars-ui/web/src/components/AddPluginMenu/plugin-menu-button.scss
+++ b/packages/toolbars-ui/web/src/components/AddPluginMenu/plugin-menu-button.scss
@@ -11,6 +11,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 8px;
   &:hover {
     background-color: rgba(var(--ricos-settings-action-color-tuple, $fallbackColorTuple), 0.06);
   }
